--- a/dianzan/server-sae/application/templates/index.html
+++ b/dianzan/server-sae/application/templates/index.html
@@ -1,4 +1,6 @@
 <html>
+
+<head>
 <style>
 .github-fork-ribbon{position:absolute;padding:2px 0;background-color:#a00;background-image:-webkit-gradient(linear,left top,left
     bottom,from(rgba(0,0,0,0.00)),to(rgba(0,0,0,0.15)));background-image:-webkit-linear-gradient(top,rgba(0,0,0,0.00),rgba(0,0,0,0.15));background-image:-moz-linear-gradient(top,rgba(0,0,0,0.00),rgba(0,0,0,0.15));background-image:-o-linear-gradient(top,rgba(0,0,0,0.00),rgba(0,0,0,0.15));background-image:-ms-linear-gradient(top,rgba(0,0,0,0.00),rgba(0,0,0,0.15));background-image:linear-gradient(top,rgba(0,0,0,0.00),rgba(0,0,0,0.15));filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#000000',EndColorStr='#000000');-webkit-box-shadow:0
@@ -7,6 +9,8 @@
         .github-fork-ribbon{top:42px;right:-43px;-webkit-transform:rotate(45deg);-moz-transform:rotate(45deg);-o-transform:rotate(45deg);transform:rotate(45deg)}.github-fork-ribbon-wrapper.left .github-fork-ribbon{top:42px;left:-43px;-webkit-transform:rotate(-45deg);-moz-transform:rotate(-45deg);-o-transform:rotate(-45deg);transform:rotate(-45deg)}.github-fork-ribbon-wrapper.left-bottom
         .github-fork-ribbon{top:80px;left:-43px;-webkit-transform:rotate(45deg);-moz-transform:rotate(45deg);-o-transform:rotate(45deg);transform:rotate(45deg)}.github-fork-ribbon-wrapper.right-bottom .github-fork-ribbon{top:80px;right:-43px;-webkit-transform:rotate(-45deg);-moz-transform:rotate(-45deg);-o-transform:rotate(-45deg);transform:rotate(-45deg)}
 </style>
+</head>
+
 <body>
 <form id="login" action="/dianzan" method="post">
     <input name="qq" type="text" placeholder="qq">
@@ -16,34 +20,42 @@
 
     <label>点赞页数</label>
     <select name="cnt">
-        <option value="volvo">1</option>
-        <option value="volvo">2</option>
-        <option value="saab">3</option>
-        <option value="fiat">4</option>
-        <option value="audi">5</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
     </select>
     <br>
     <label>点赞次数</label>
     <select name="feq">
-        <option value="volvo">1</option>
-        <option value="volvo">5</option>
-        <option value="saab">10</option>
-        <option value="fiat">20</option>
-        <option value="audi">50</option>
-        <option value="audi">100</option>
+        <option value="1">1</option>
+        <option value="5">5</option>
+        <option value="10">10</option>
+        <option value="20">20</option>
+        <option value="50">50</option>
+        <option value="100">100</option>
+        <option value="100">200</option>
+        <option value="100">500</option>
     </select>
     <br>
     <label>点赞间隔(min)</label>
     <select name="inc">
-        <option value="volvo">5</option>
-        <option value="volvo">10</option>
-        <option value="saab">30</option>
-        <option value="fiat">60</option>
-        <option value="audi">120</option>
+        <option value="10">10</option>
+        <option value="20">30</option>
+        <option value="60">60</option>
+        <option value="120">120</option>
+        <option value="5">5</option>
     </select>
     <br>
     <input type="submit" value="confirm" class="bt">
 </form>
-<p>web版的点赞次数和间隔还没实现,等考试完再弄吧</p>
-<strong>很多人问我有没有记录密码,,,没有,没有记录任何东西,你可以看下源代码(右上角)</strong>
-
+<!--p>web版的点赞次数和间隔还没实现,等考试完再弄吧</p>
+<strong>很多人问我有没有记录密码,,,没有,没有记录任何东西,你可以看下源代码(右上角)</strong-->
+<div class="github-fork-ribbon-wrapper right">
+    <div class="github-fork-ribbon">
+        <a href="https://github.com/atupal/3gqq/blob/master/dianzan/dianzan_py-dom-xpath.py">Fork me on GitHub</a>
+    </div>
+</div>
+</body>
+</html>
